# turboQuantPlayground

./: .gitignore  README.md  SUMMARY.md  pyproject.toml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  turboquant_jni.cpp
android/app/src/main/cpp/include/: turboquant
android/app/src/main/java/com/yzamari/turboquant/: App.kt  MainActivity.kt  TurboQuantNative.kt
android/app/src/main/java/com/yzamari/turboquant/assistant/: Assistant.kt  AssistantViewModel.kt  LlamaNative.kt  ToolDispatcher.kt  Tools.kt  Voice.kt
android/app/src/main/java/com/yzamari/turboquant/ui/: BenchScreen.kt  ChatScreen.kt  SettingsScreen.kt
android/app/src/main/res/values/: strings.xml  themes.xml
benchmarks/: bench_attention_score.py  bench_memory.py  bench_quantize.py
cpp/: CMakeLists.txt  README.md
cpp/backends/cpu_neon/: CMakeLists.txt  neon_backend.cpp
cpp/backends/cpu_scalar/: CMakeLists.txt  scalar_backend.cpp
cpp/backends/opencl/: CMakeLists.txt  opencl_backend.cpp  opencl_loader.cpp  opencl_loader.hpp
cpp/backends/opencl/include/CL/: cl.h
cpp/backends/opencl/kernels/: mse_encode.cl  mse_score.cl  qjl_score.cl  rotate.cl  value_dequant.cl
cpp/backends/qnn_htp/: CMakeLists.txt  README.md  qnn_graph.cpp  qnn_graph.hpp  qnn_htp_backend.cpp  qnn_loader.cpp  qnn_loader.hpp
cpp/backends/vulkan/: CMakeLists.txt  embed_runner.cmake  vulkan_backend.cpp
cpp/backends/vulkan/shaders/: mse_encode_u32_b3.comp  mse_encode_uchar.comp  mse_score_u32_b3.comp  mse_score_uchar.comp  qjl_score.comp  rotate.comp  value_dequant.comp
cpp/bench/: CMakeLists.txt  baseline_kv_cache.cpp  baseline_kv_cache.hpp  bench_cli.cpp  bench_runner.hpp
cpp/bench/results/: README.md  s24-cpu_neon.csv  s24-cpu_scalar.csv  s24-opencl.csv  s24-vulkan.csv  tabs9p-cpu_neon.csv  tabs9p-cpu_scalar.csv  tabs9p-opencl.csv  tabs9p-vulkan.csv
cpp/bench/results/llamacpp/: tabs9p-llama32-1b-realmodel.txt  turboquant_kv_seq117.csv  turboquant_kv_seq22.csv
cpp/cmake/: embed_resource.cmake  toolchain-android-arm64.cmake  toolchain-linux-aarch64.cmake  toolchain-qnx-aarch64.cmake
cpp/include/turboquant/: api.hpp  backend.hpp  codebook.hpp  types.hpp
cpp/src/: backend_factory.cpp  codebook.cpp  kv_cache.cpp  packing.cpp  packing.hpp  quantizer.cpp  rotation.cpp
cpp/tests/: CMakeLists.txt  packing_test.cpp  parity_test.cpp  smoke_test.cpp  tq_test.hpp
cpp/tests/golden/: manifest.json
cpp/tools/: gen_golden.py
docs/: BUILDING.md  README.md  llamacpp-integration.md
docs/architecture/: backend-comparison.md  data-flow.md  kv-cache-flow.md  system-overview.md
docs/benchmarks/: README.md
docs/qualcomm/: README.md  adreno-gpu.md  automotive.md  benefits.md  hexagon-htp.md
notebooks/: 01_lloyd_max_codebook.py  02_rotation_and_quantization.py  03_qjl_correction.py  04_kv_cache_demo.py
src/turboquant_mac/: kv_cache.py  quantizer.py  rotation.py
src/turboquant_mac/backends/: metal_kernels.py
src/turboquant_mac/backends/metal/: mse_encode.py  mse_score.py
tests/: test_kv_cache.py  test_quantizer.py  test_rotation.py
