cmake_minimum_required(VERSION 3.22)
project(turboquant_cpp
    VERSION 0.1.0
    DESCRIPTION "TurboQuant KV-cache compression — C++ port for Qualcomm Snapdragon (mobile + automotive)"
    LANGUAGES CXX C
)

# -----------------------------------------------------------------------------
# Backend selection (compile-time). Each defaults OFF; turn on per-platform.
# -----------------------------------------------------------------------------
option(TQ_WITH_CPU_SCALAR "Build the portable C++17 reference backend"        ON)
option(TQ_WITH_NEON       "Build the ARM NEON backend (P1.a)"                 OFF)
option(TQ_WITH_QNN        "Build the Qualcomm QNN/HTP backend (P1.b)"          OFF)
option(TQ_WITH_OPENCL     "Build the Adreno OpenCL backend (P2)"              OFF)
option(TQ_WITH_VULKAN     "Build the Adreno Vulkan compute backend (P3)"      OFF)
option(TQ_WITH_JNI        "Build the Android JNI shim (P4, Android only)"     OFF)
option(TQ_BUILD_TESTS     "Build parity / packing tests"                      ON)
option(TQ_BUILD_BENCH     "Build the bench CLI"                               ON)

# -----------------------------------------------------------------------------
# C++ standard and warnings — same on every platform.
# -----------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-unused-parameter)
endif()

# -----------------------------------------------------------------------------
# Embedded resource helper (codebooks + GPU kernel sources -> const byte arrays)
# -----------------------------------------------------------------------------
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/embed_resource.cmake)

# -----------------------------------------------------------------------------
# Codebooks — embed all JSON files from the existing Python project as const
# byte arrays so the library has no runtime filesystem dependency.
# -----------------------------------------------------------------------------
set(TQ_CODEBOOKS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../src/turboquant_mac/codebooks")
file(GLOB TQ_CODEBOOK_JSONS "${TQ_CODEBOOKS_DIR}/codebook_d*_b*.json")

set(TQ_CODEBOOK_GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated/codebooks")
file(MAKE_DIRECTORY ${TQ_CODEBOOK_GENERATED_DIR})

set(TQ_CODEBOOK_GENERATED_SOURCES "")
foreach(json ${TQ_CODEBOOK_JSONS})
    get_filename_component(name "${json}" NAME_WE)  # e.g. codebook_d128_b3
    set(out_c   "${TQ_CODEBOOK_GENERATED_DIR}/${name}.c")
    embed_resource("${json}" "${out_c}" "tq_${name}")
    list(APPEND TQ_CODEBOOK_GENERATED_SOURCES "${out_c}")
endforeach()

# Generated index header: lists all embedded codebook symbols
set(TQ_CODEBOOK_INDEX_HPP "${TQ_CODEBOOK_GENERATED_DIR}/codebook_index.hpp")
set(_idx "// Auto-generated by cmake — do not edit\n#pragma once\n#include <cstddef>\n#include <cstdint>\n\nnamespace turboquant::detail {\n\nstruct CodebookBlob {\n    const char* name;\n    int d;\n    int bits;\n    const unsigned char* data;\n    std::size_t size;\n};\n\n")
foreach(json ${TQ_CODEBOOK_JSONS})
    get_filename_component(name "${json}" NAME_WE)
    string(REGEX MATCH "codebook_d([0-9]+)_b([0-9]+)" _ "${name}")
    set(_d ${CMAKE_MATCH_1})
    set(_b ${CMAKE_MATCH_2})
    set(_idx "${_idx}extern \"C\" const unsigned char tq_${name}[];\nextern \"C\" const std::size_t tq_${name}_size;\n")
endforeach()
set(_idx "${_idx}\ninline const CodebookBlob kCodebookBlobs[] = {\n")
foreach(json ${TQ_CODEBOOK_JSONS})
    get_filename_component(name "${json}" NAME_WE)
    string(REGEX MATCH "codebook_d([0-9]+)_b([0-9]+)" _ "${name}")
    set(_d ${CMAKE_MATCH_1})
    set(_b ${CMAKE_MATCH_2})
    set(_idx "${_idx}    {\"${name}\", ${_d}, ${_b}, tq_${name}, tq_${name}_size},\n")
endforeach()
set(_idx "${_idx}};\n\ninline constexpr std::size_t kCodebookBlobsCount = sizeof(kCodebookBlobs) / sizeof(kCodebookBlobs[0]);\n\n}  // namespace turboquant::detail\n")
file(WRITE "${TQ_CODEBOOK_INDEX_HPP}" "${_idx}")

# -----------------------------------------------------------------------------
# Core library — portable C++17, zero OS dependency, zero vendor SDK.
# -----------------------------------------------------------------------------
add_library(turboquant STATIC
    src/codebook.cpp
    src/rotation.cpp
    src/packing.cpp
    src/quantizer.cpp
    src/kv_cache.cpp
    src/backend_factory.cpp
    ${TQ_CODEBOOK_GENERATED_SOURCES}
)
target_include_directories(turboquant
    PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/include
    PRIVATE ${TQ_CODEBOOK_GENERATED_DIR}
)
target_compile_features(turboquant PUBLIC cxx_std_17)

# -----------------------------------------------------------------------------
# Backends — each adds a static library and registers itself with the factory
# via a TQ_REGISTER_BACKEND_* compile definition.
# -----------------------------------------------------------------------------
if(TQ_WITH_CPU_SCALAR)
    add_subdirectory(backends/cpu_scalar)
    target_link_libraries(turboquant PRIVATE tq_backend_cpu_scalar)
    target_compile_definitions(turboquant PUBLIC TQ_WITH_CPU_SCALAR=1)
endif()

if(TQ_WITH_NEON)
    add_subdirectory(backends/cpu_neon)
    target_link_libraries(turboquant PRIVATE tq_backend_cpu_neon)
    target_compile_definitions(turboquant PUBLIC TQ_WITH_NEON=1)
endif()

if(TQ_WITH_QNN)
    add_subdirectory(backends/qnn_htp)
    target_link_libraries(turboquant PRIVATE tq_backend_qnn_htp)
    # Only define TQ_WITH_QNN=1 if the SDK was found and a real STATIC lib was
    # built. The qnn_htp CMakeLists falls back to an INTERFACE target when
    # QNN_SDK_ROOT is unset; in that case the create_qnn_htp_backend() symbol
    # doesn't exist, and we must not let backend_factory reference it.
    get_target_property(_qnn_type tq_backend_qnn_htp TYPE)
    if(NOT _qnn_type STREQUAL "INTERFACE_LIBRARY")
        target_compile_definitions(turboquant PUBLIC TQ_WITH_QNN=1)
    else()
        message(STATUS "qnn_htp built as INTERFACE only (SDK absent); TQ_WITH_QNN preprocessor flag NOT set")
    endif()
endif()

if(TQ_WITH_OPENCL)
    add_subdirectory(backends/opencl)
    target_link_libraries(turboquant PRIVATE tq_backend_opencl)
    target_compile_definitions(turboquant PUBLIC TQ_WITH_OPENCL=1)
endif()

if(TQ_WITH_VULKAN)
    add_subdirectory(backends/vulkan)
    target_link_libraries(turboquant PRIVATE tq_backend_vulkan)
    target_compile_definitions(turboquant PUBLIC TQ_WITH_VULKAN=1)
endif()

# -----------------------------------------------------------------------------
# Tests
# -----------------------------------------------------------------------------
if(TQ_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()

# -----------------------------------------------------------------------------
# Bench CLI
# -----------------------------------------------------------------------------
if(TQ_BUILD_BENCH)
    add_subdirectory(bench)
endif()

# -----------------------------------------------------------------------------
# Summary
# -----------------------------------------------------------------------------
message(STATUS "")
message(STATUS "turboquant_cpp configuration:")
message(STATUS "  CMAKE_SYSTEM_NAME       = ${CMAKE_SYSTEM_NAME}")
message(STATUS "  CMAKE_SYSTEM_PROCESSOR  = ${CMAKE_SYSTEM_PROCESSOR}")
message(STATUS "  CMAKE_BUILD_TYPE        = ${CMAKE_BUILD_TYPE}")
message(STATUS "  TQ_WITH_CPU_SCALAR      = ${TQ_WITH_CPU_SCALAR}")
message(STATUS "  TQ_WITH_NEON            = ${TQ_WITH_NEON}")
message(STATUS "  TQ_WITH_QNN             = ${TQ_WITH_QNN}")
message(STATUS "  TQ_WITH_OPENCL          = ${TQ_WITH_OPENCL}")
message(STATUS "  TQ_WITH_VULKAN          = ${TQ_WITH_VULKAN}")
message(STATUS "  TQ_BUILD_TESTS          = ${TQ_BUILD_TESTS}")
message(STATUS "  TQ_BUILD_BENCH          = ${TQ_BUILD_BENCH}")
message(STATUS "  Codebooks embedded      = ${TQ_CODEBOOK_JSONS}")
message(STATUS "")
